# c-hat

./: .gitignore  CMakeLists.txt  README.md  debug_static_test.cpp  static_err.txt  static_out.txt
.workbuddy/memory/: 2026-03-27.md  MEMORY.md
docs/choose/: 001_析构函数语法选择.md  003_完美转发与显式引用的冲突.md  (+5 more)
src/: CMakeLists.txt  main.cpp
src/ast/: AstNodes.cpp  AstNodes.h  CMakeLists.txt  Node.h  NodeType.h
src/ast/declarations/: AttributeDecl.cpp  AttributeDecl.h  ClassDecl.cpp  ClassDecl.h  ConceptDecl.cpp  ConceptDecl.h  Declaration.h  EnumDecl.cpp  EnumDecl.h  EnumMember.cpp  EnumMember.h  ExportDecl.h  ExtensionDecl.cpp  ExtensionDecl.h  ExternDecl.cpp  ExternDecl.h  FunctionDecl.cpp  FunctionDecl.h  GetterDecl.cpp  GetterDecl.h  ImportDecl.cpp  ImportDecl.h  InterfaceDecl.cpp  InterfaceDecl.h  ModuleDecl.cpp  ModuleDecl.h  NamespaceDecl.cpp  NamespaceDecl.h  SetterDecl.cpp  SetterDecl.h  StructDecl.cpp  StructDecl.h  TupleDestructuringDecl.h  TypeAliasDecl.h  VariableDecl.cpp  VariableDecl.h
src/ast/expressions/: ArrayInitExpr.cpp  ArrayInitExpr.h  BinaryExpr.cpp  BinaryExpr.h  BuiltinVarExpr.h  CallExpr.cpp  CallExpr.h  DeleteExpr.cpp  DeleteExpr.h  ExpansionExpr.cpp  ExpansionExpr.h  Expression.h  FoldExpr.cpp  FoldExpr.h  Identifier.cpp  Identifier.h  LambdaExpr.cpp  LambdaExpr.h  Literal.cpp  Literal.h  MemberExpr.cpp  MemberExpr.h  NewExpr.cpp  NewExpr.h  ReflectionExpr.cpp  ReflectionExpr.h  SelfExpr.h  StructInitExpr.cpp  StructInitExpr.h  SubscriptExpr.cpp  SubscriptExpr.h  SuperExpr.h  ThisExpr.h  TupleExpr.h  UnaryExpr.cpp  UnaryExpr.h
src/ast/others/: AttributeApplication.h  Parameter.cpp  Parameter.h  Program.cpp  Program.h
src/ast/statements/: BreakStmt.h  CompoundStmt.cpp  CompoundStmt.h  ComptimeStmt.cpp  ComptimeStmt.h  ContinueStmt.h  DoWhileStmt.cpp  DoWhileStmt.h  ExprStmt.cpp  ExprStmt.h  ForStmt.cpp  ForStmt.h  GotoStmt.h  IfStmt.cpp  IfStmt.h  LabelStmt.h  ReturnStmt.cpp  ReturnStmt.h  Statement.h  TupleDestructuringStmt.h  VariableStmt.h  WhileStmt.cpp  WhileStmt.h  YieldStmt.cpp  YieldStmt.h
src/ast/statements/exception/: CatchStmt.cpp  CatchStmt.h  DeferStmt.cpp  DeferStmt.h  ThrowStmt.cpp  ThrowStmt.h  TryStmt.cpp  TryStmt.h
src/ast/statements/match/: MatchArm.cpp  MatchArm.h  MatchStmt.cpp  MatchStmt.h  Pattern.h
src/ast/templates/: Requirement.cpp  Requirement.h  RequiresClause.cpp  RequiresClause.h  RequiresExpression.cpp  RequiresExpression.h  TemplateParameter.h  WhereClause.cpp  WhereClause.h
src/ast/types/: ArrayType.cpp  ArrayType.h  FunctionType.cpp  FunctionType.h  GenericType.cpp  GenericType.h  NamedType.h  NullableType.h  PointerType.cpp  PointerType.h  PrimitiveType.cpp  PrimitiveType.h  ReadonlyType.cpp  ReadonlyType.h  RectangularArrayType.cpp  RectangularArrayType.h  RectangularSliceType.cpp  RectangularSliceType.h  ReferenceType.cpp  ReferenceType.h  SliceType.cpp  SliceType.h  TupleType.cpp  TupleType.h  Type.h
src/codegen/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h
src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  TokenType.h
src/llvm/: CMakeLists.txt  LLVMCodeGenerator.cpp  LLVMCodeGenerator.h  LLVMIRGenerator.cpp  LLVMIRGenerator.h
src/parser/: CMakeLists.txt  Parser.cpp  Parser.h
src/semantic/: CMakeLists.txt  ClassSymbol.h  EnumSymbol.h  ExtensionRegistry.cpp  ExtensionRegistry.h  FunctionSymbol.h  ModuleLoader.cpp  ModuleLoader.h  ModuleSymbol.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  StructSymbol.h  Symbol.h  SymbolTable.cpp  SymbolTable.h  TypeAliasSymbol.h  VariableSymbol.h
src/types/: ArrayType.cpp  ArrayType.h  CMakeLists.txt  ClassType.cpp  ClassType.h  FunctionType.cpp  FunctionType.h  GenericType.cpp  GenericType.h  InterfaceType.cpp  InterfaceType.h  LiteralViewType.cpp  LiteralViewType.h  NullableType.cpp  NullableType.h  PointerType.cpp  PointerType.h  PrimitiveType.cpp  PrimitiveType.h  ReadonlyType.cpp  ReadonlyType.h  RectangularArrayType.cpp  RectangularArrayType.h  RectangularSliceType.cpp  RectangularSliceType.h  ReferenceType.cpp  ReferenceType.h  SliceType.cpp  SliceType.h  TupleType.cpp  TupleType.h  Type.cpp  Type.h  TypeFactory.cpp  TypeFactory.h  Types.h
tests/: CMakeLists.txt  TEST_COVERAGE.md  parser_test.cpp  semantic_test.cpp  test_readonly_token.cpp  tuple_test.cpp
tests/access_control/: AccessControlTest.cpp  CMakeLists.txt
tests/array/: ArrayTest.cpp  CMakeLists.txt
tests/attribute/: AttributeTest.cpp  CMakeLists.txt
tests/builtin_vars/: BuiltinVarsTest.cpp  CMakeLists.txt
tests/class_system/: CMakeLists.txt  ClassTest.cpp
tests/coroutine/: CMakeLists.txt  CoroutineTest.cpp
tests/defer/: CMakeLists.txt  DeferTest.cpp
tests/exception/: CMakeLists.txt  ExceptionTest.cpp
tests/extension/: CMakeLists.txt  ExtensionTest.cpp
tests/ffi/: CMakeLists.txt  FfiTest.cpp
tests/foreach/: CMakeLists.txt  ForeachTest.cpp
tests/generics/: CMakeLists.txt  GenericsTest.cpp
tests/goto/: CMakeLists.txt  GotoTest.cpp
tests/immutable_method/: CMakeLists.txt  ImmutableMethodTest.cpp
tests/immutable_method/runner/: ITestRunner.cpp  ITestRunner.h  runner_main.cpp
tests/lambda/: CMakeLists.txt  LambdaTest.cpp
tests/late/: CMakeLists.txt  LateTest.cpp
tests/match/: CMakeLists.txt  MatchTest.cpp
tests/module/: CMakeLists.txt  ModuleTest.cpp
tests/new_delete/: CMakeLists.txt  NewDeleteTest.cpp
tests/nullable/: CMakeLists.txt  NullableTest.cpp
tests/overload/: CMakeLists.txt  OverloadTest.cpp
tests/parser/: CMakeLists.txt  ParserTest.cpp
tests/pointer/: CMakeLists.txt  PointerTest.cpp
tests/property/: CMakeLists.txt  PropertyTest.cpp
tests/reference/: CMakeLists.txt  ReferenceTest.cpp
tests/result_type/: CMakeLists.txt  ResultTypeTest.cpp
tests/semantic/: CMakeLists.txt  SemanticTest.cpp
tests/static/: CMakeLists.txt  StaticTest.cpp
tests/string_literal/: CMakeLists.txt  StringLiteralTest.cpp
tests/tuple/: CMakeLists.txt  CMakeLists_test_debug.txt  TupleTest.cpp  test_debug.cpp
tests/types/: CMakeLists.txt  TypeSystemTest.cpp
tests/variadic/: CMakeLists.txt  VariadicTest.cpp  debug_lexer.cpp  debug_variadic.cpp  test_printf.cpp
(+138 files in other folders)
