find_package(Catch2 3 REQUIRED)

add_subdirectory(parser)
add_subdirectory(semantic)
add_subdirectory(class_system)
add_subdirectory(exception)
add_subdirectory(array)
add_subdirectory(defer)
add_subdirectory(new_delete)
add_subdirectory(tuple)
add_subdirectory(types)
add_subdirectory(lambda)
add_subdirectory(variadic)
add_subdirectory(property)
add_subdirectory(pointer)
add_subdirectory(late)
add_subdirectory(match)
add_subdirectory(immutable_method)
add_subdirectory(result_type)
add_subdirectory(overload)
add_subdirectory(access_control)
add_subdirectory(foreach)
add_subdirectory(generics)
add_subdirectory(module)
add_subdirectory(nullable)
add_subdirectory(reference)
add_subdirectory(static)
add_subdirectory(string_literal)
add_subdirectory(extension)
add_subdirectory(goto)
add_subdirectory(ffi)
add_subdirectory(coroutine)
add_subdirectory(attribute)
